deployment-bookmedik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmedik
  labels:
    app: bookmedik
    tier: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: bookmedik
            tier: frontend
    template:
        metadata:
            labels:
                app: bookmedik
                tier: frontend
        spec:
            containers:
                - name: bookmedik
                  image: belennazareth/bookmedik:v2
                  ports:
                    - containerPort: 80
                      name: bookmedik
