deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mariadb
            tier: backend
    template:
        metadata:
            labels:
                app: mariadb
                tier: backend
        spec:
            containers:
                - name: mariadb
                  image: mariadb:10.5
                  ports:
                      - containerPort: 3306
                        name: mariadb
                  volumeMounts:
                      - name: volumen-mariadb
                        mountPath: /var/lib/mysql
            volumes:
                - name: volumen-mariadb
                  persistentVolumeClaim:
                    claimName: pvc-bookmedik
