service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: backend
spec:
    type: ClusterIP
    ports:
    - port: 3306
      targetPort: mariadb-port
    selector:
      app: mariadb
      tier: backend
