ingress-bookmedik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bookmedik
spec:
    rules:
    - host: www.nazareth.org
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: bookmedik
                    port:
                        number: 80
